--- a/AspNetSignalRSamples/AspNetSignalRSamples/AspNetSignalRSamples.csproj
+++ b/AspNetSignalRSamples/AspNetSignalRSamples/AspNetSignalRSamples.csproj
@@ -139,6 +139,8 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SignalR\BroadcastHub.cs" />
+    <Compile Include="SignalR\Startup.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\web.config" />
