--- a/AspNetSignalRSamples/AspNetSignalRSamples/packages.config
+++ b/AspNetSignalRSamples/AspNetSignalRSamples/packages.config
@@ -8,15 +8,21 @@
   <package id="Microsoft.AspNet.Razor.zh-Hant" version="3.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.SignalR" version="2.2.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.SignalR.Core" version="2.2.0" targetFramework="net461" />
+  <package id="Microsoft.AspNet.SignalR.Core.zh-Hant" version="2.1.2" targetFramework="net461" />
   <package id="Microsoft.AspNet.SignalR.JS" version="2.2.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.SignalR.SystemWeb" version="2.2.0" targetFramework="net461" />
+  <package id="Microsoft.AspNet.SignalR.SystemWeb.zh-Hant" version="2.1.2" targetFramework="net461" />
+  <package id="Microsoft.AspNet.SignalR.zh-Hant" version="2.1.2" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebPages.zh-Hant" version="3.2.3" targetFramework="net461" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.0" targetFramework="net461" />
   <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net461" developmentDependency="true" />
   <package id="Microsoft.Owin" version="2.1.0" targetFramework="net461" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="2.1.0" targetFramework="net461" />
+  <package id="Microsoft.Owin.Host.SystemWeb.zh-Hant" version="3.0.1" targetFramework="net461" />
   <package id="Microsoft.Owin.Security" version="2.1.0" targetFramework="net461" />
+  <package id="Microsoft.Owin.Security.zh-Hant" version="3.0.1" targetFramework="net461" />
+  <package id="Microsoft.Owin.zh-Hant" version="3.0.1" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="Modernizr" version="2.6.2" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net461" />
